--- a/index.html
+++ b/index.html
@@ -1,7 +1,83 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <title>Jamaya Allen</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+        <meta name="description" content="My Website">
+        <meta name="author" content="Jamaya Allen">
+        <link rel="shortcut icon" type="image/png" href="/img/Favicon.png"/>
+        <link rel="stylesheet" type="text/css" href="/css/base.css">
+        <link rel="stylesheet" type="text/css" href="/css/style.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+        <script src="https://use.typekit.net/zoc2jjk.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+        <script src="/js/script.js"></script>
+        <script>try{Typekit.load({ async: true });}catch(e){}</script>
+        <script>
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+            ga('create', 'UA-74048790-1', 'auto');
+            ga('send', 'pageview');
+        </script>
+    </head>
+    <body>
+        <div class="hero" id="main">
+            <div class="circle"></div>
+            <h1 class="fancy-title">Jamaya Allen</h1>
+            <h6>Towson University '18. Business Administration major.</h6>
+            <br>
+            <div class="links">
+                <ul>
+                    <li><div class="grow"><a href="http://github.com/jamayaallen" target="_blank"><i class="fa fa-github"></i></a></div></li>
+                    <li><div class="grow"><a href="https://www.linkedin.com/in/jamayaallen" target="_blank"><i class="fa fa-linkedin"></i></a></div></li>
+                    <li><div class="grow"><a href="/Jamaya Allen_Resume.pdf" target="_blank"><i class="fa fa-file-pdf-o"></i></a></div></li>
+                    <li><div class="grow"><a href="mailto:jamaya.allen@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a></div></li>
+                </ul>
+            </div>
+            <div class="arrow">
+                <a href="#about-me"><i class="fa fa-arrow-down"></i></a>
+            </div>
+        </div>
+        <div class="navbar-wrapper">
+            <nav>
+                <div class="navbar content">
+                    <ul>
+                        <li><a href="#main"><p>Jamaya Allen</p></a></li>
+                        <li><a href="#about-me"><p>About Me</p></a></li>
+                        <li><a href="#projects"><p>Projects</p></a></li>
+                        <li><a href="#experience"><p>Experience</p></a></li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+        <section id="about-me">
+            <div class="content">
+                <h2>About Me</h2>
+                <p>Hey there! I'm Jessica, a fourth-year Computer Engineering major at UT Austin. I started coding as a curious 7th grader taking an intro to HTML class, and I've been passionate about tech ever since. Outside of class, I love exciting students about entrepreneurship with <a href="http://austin.3daystartup.org/" target="_blank">3 Day Startup Austin</a> as the recruitment lead, attending workshops with the <a href="https://www.facebook.com/groups/dsgncoll/" target="_blank">Design Collective</a>, and making random mini-projects like this <a href="https://jessicaslaughter.github.io/TodoList/" target="_blank">Todo List</a>.</p>
+                    
+                <p>Along with learning new skills (currently loving Udemy's <a href="https://www.udemy.com/the-web-developer-bootcamp/learn/v4/overview" target="_blank">Web Developer Bootcamp</a>), one of my favorite hobbies is helping people through my blog-turned-job! I'm currently helping young women thrive in college and start blogs of their own at <a href="http://jessicaslaughter.co" target="_blank">JessicaSlaughter.co</a>, a blog I've poured my heart into since high school and use as a platform to further my creative skills.</p>
+            </div>
+        </section>
+        <section id="projects">
+            <div class="content">
+                <h2>Projects</h2><br>
+                <img src="img/evenstrength.jpg">
+                <h3><a href="http://jessicaslaughter.co" target="_blank">Even-Strength Analytics Scholarship</a></h3>
+                <h6>2018 - present</h6>
+                <p>analytics experience description</a>.</p>
+            </div>
+        </section>
+        <section id="experience">
+            <div class="content">
+                <h2>Experience</h2>
+                <img src="img/imre.jpg">
+                <h3>3 Day Startup Austin - Recruitment Lead</h3>
+                <h6>2014 - present</h6>
+                <p>3 Day Startup is a 72-hour learning-by-doing workshop that teaches entrepreneurial skills to university students in an extreme hands-on environment. After participating in <a href="http://austin.3daystartup.org/" target="_blank">3 Day Startup Austin</a> as a freshman, I joined this organization under their recruitment team. I'm now the lead of this team and in charge of planning our semester-long recruitment season, running a pre-event bootcamp, and interviewing potential participants ranging from local students to working professionals.</p>
+            </div>
+        </section>
+    </body>
 </html>
