--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <h2>About Me</h2>
                 <p>Hey there! I'm Jamaya,</a>.</p>
                     
-                <p>Along with learning new skills (currently loving Udemy's <a href="https://www.udemy.com/the-web-developer-bootcamp/learn/v4/overview" target="_blank">Web Developer Bootcamp</a>), one of my favorite hobbies is helping people through my blog-turned-job! I'm currently helping young women thrive in college and start blogs of their own at <a href="http://jessicaslaughter.co" target="_blank">JessicaSlaughter.co</a>, a blog I've poured my heart into since high school and use as a platform to further my creative skills.</p>
+                <p>Also.....</p>
             </div>
         </section>
         <section id="projects">
