--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="content">
                 <h2>Projects</h2><br>
                 <img src="img/evenstrength.jpg">
-                <h3><a href="http://jessicaslaughter.co" target="_blank">Even-Strength Analytics Scholarship</a></h3>
+                <h3><a Even-Strength Analytics Scholarship</a></h3>
                 <h6>2018 - present</h6>
                 <p>analytics experience description</a>.</p>
             </div>
