--- a/index.html
+++ b/index.html
@@ -63,7 +63,11 @@
                 <img src="img/imre.jpg">
                 <h3>Research Intern</h3>
                 <h6>January - April 2018</h6>
-                <p>Imre experience description.</p>
+                <p>• Conducted marketing research analysis in Microsoft Office and SPSS for decision-making in primary and secondary research projects
+• Developed graphs, charts, and pivot tables to convey key analysis in presentations
+• Used quantitative and qualitative methodologies to provide strategic and actionable recommendations that drive client campaigns and programs
+• Provided strategic and analytical support across sport, consumer, healthcare and financial services teams by monitoring market trends and providing research data
+• Assisted teams with research and digital marketing in guiding clients on creating bonds with audiences, cultivating experiences, and building brand loyalty and credibility.</p>
             </div>
         </section>
     </body>
