--- a/index.html
+++ b/index.html
@@ -71,9 +71,8 @@
             </div>
         </section>
  <div class="content">
-                <h2>Experience</h2>
                 <img src="img/imre.jpg">
-                <h3>Research Intern</h3>
+                <h3>Student Consultant</h3>
                 <h6>January - April 2018</h6>
                 <p>• Conducted marketing research analysis in Microsoft Office and SPSS for decision-making in primary and secondary research projects
 • Developed graphs, charts, and pivot tables to convey key analysis in presentations
