--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
                 <img src="img/imre.jpg">
                 <h3>Student Consultant</h3>
                 <h6>January - April 2018</h6>
-                <p>• Conducted marketing research analysis in Microsoft Office and SPSS for decision-making in primary and secondary research projects
-• Developed graphs, charts, and pivot tables to convey key analysis in presentations
-• Used quantitative and qualitative methodologies to provide strategic and actionable recommendations that drive client campaigns and programs
-• Provided strategic and analytical support across sport, consumer, healthcare and financial services teams by monitoring market trends and providing research data
-• Assisted teams with research and digital marketing in guiding clients on creating bonds with audiences, cultivating experiences, and building brand loyalty and credibility.</p>
+                <p>• Exercised and enhanced skills in academic and career consulting, business writing, networking, event planning, presentations, teamwork and project management
+• Analyzed consumer survey insights to develop a brand strategy aimed at designing new services and improving user experiences
+• Advised partners on marketing and social media strategy which increased engagement, awareness, and general attitudes toward the college and its partners
+• Guided students on mapping their road to academic and professional success
+• Provided administrative support to senior leadership in troubleshooting client issues </p>
             </div>
         </section>
     </body>
