--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <h2>Projects</h2><br>
                 <img src="img/evenstrength.jpg">
                 <h3><a Even-Strength Analytics Scholarship</a></h3>
-                <h6>2018 - present</h6>
+                <h6>January 2018 - present</h6>
                 <p>analytics experience description</a>.</p>
             </div>
         </section>
@@ -71,14 +71,14 @@
             </div>
         </section>
  <div class="content">
-                <img src="img/imre.jpg">
+                <img src="img/IMG_3771.CR2">
                 <h3>Student Consultant</h3>
-                <h6>January - April 2018</h6>
-                <p>• Exercised and enhanced skills in academic and career consulting, business writing, networking, event planning, presentations, teamwork and project management
-• Analyzed consumer survey insights to develop a brand strategy aimed at designing new services and improving user experiences
-• Advised partners on marketing and social media strategy which increased engagement, awareness, and general attitudes toward the college and its partners
-• Guided students on mapping their road to academic and professional success
-• Provided administrative support to senior leadership in troubleshooting client issues </p>
+                <h6>June 2017 - August 2018</h6>
+                <p>• Exercised and enhanced skills in academic and career consulting, business writing, networking, event planning, presentations, teamwork and project management </p>
+<p>• Analyzed consumer survey insights to develop a brand strategy aimed at designing new services and improving user experiences </p>
+<p>• Advised partners on marketing and social media strategy which increased engagement, awareness, and general attitudes toward the college and its partners </p>
+<p>• Guided students on mapping their road to academic and professional success </p>
+<p>• Provided administrative support to senior leadership in troubleshooting client issues </p>
             </div>
         </section>
     </body>
