--- a/index.html
+++ b/index.html
@@ -52,9 +52,10 @@
             <div class="content">
                 <h2>Projects</h2><br>
                 <img src="img/evenstrength.jpg">
-                <h3><a Even-Strength Analytics Scholarship</a></h3>
+                <h3><a Even-Strength Analytics</a></h3>
                 <h6>January 2018 - present</h6>
-                <p>analytics experience description</a>.</p>
+                <p> Even strength is a go-to analytics database that fans, players, coaches, and members of the media can turn to which provides fans with an accessible platform to navigate NWHL stats. 
+On the site, fans can find player and team data, as well as charts and tools for easy analysis. To encourage more and more people to start getting involved in women’s hockey and statistics, Even-strength announced The Scholarship program which is aimed at women and gender minorities with a vested interest in Women's Sport Analytics and includes three months of access to Data Camp and the opportunity to learn any combination of R, Python and SQL through the site. As a recipient of the even-strength scholarship,  </a>.</p>
             </div>
         </section>
         <section id="experience">
@@ -63,11 +64,11 @@
                 <img src="img/imre.jpg">
                 <h3>Research Intern</h3>
                 <h6>January - April 2018</h6>
-                <p>• Conducted marketing research analysis in Microsoft Office and SPSS for decision-making in primary and secondary research projects
-• Developed graphs, charts, and pivot tables to convey key analysis in presentations
-• Used quantitative and qualitative methodologies to provide strategic and actionable recommendations that drive client campaigns and programs
-• Provided strategic and analytical support across sport, consumer, healthcare and financial services teams by monitoring market trends and providing research data
-• Assisted teams with research and digital marketing in guiding clients on creating bonds with audiences, cultivating experiences, and building brand loyalty and credibility.</p>
+                <p>• Conducted marketing research analysis in Microsoft Office and SPSS for decision-making in primary and secondary research projects</p>
+<p>• Developed graphs, charts, and pivot tables to convey key analysis in presentations</p>
+<p>• Used quantitative and qualitative methodologies to provide strategic and actionable recommendations that drive client campaigns and programs</p>
+<p>• Provided strategic and analytical support across sport, consumer, healthcare and financial services teams by monitoring market trends and providing research data</p>
+<p>• Assisted teams with research and digital marketing in guiding clients on creating bonds with audiences, cultivating experiences, and building brand loyalty and credibility</p>
             </div>
         </section>
  <div class="content">
