--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ On the site, fans can find player and team data, as well as charts and tools for
             </div>
         </section>
  <div class="content">
-                <img src="img/IMG_3771.CR2">
+                <img src="img/IMG_3771.jpg">
                 <h3>Student Consultant</h3>
                 <h6>June 2017 - August 2018</h6>
                 <p>• Exercised and enhanced skills in academic and career consulting, business writing, networking, event planning, presentations, teamwork and project management </p>
